--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -17,7 +17,7 @@
     favicon
     -->
 
-    <link rel="icon" type="image/x-icon" th:href="@{../assets/favicon.ico}">
+    <link rel="icon" type="image/x-icon" th:href="@{/assets/images/favicon.ico}">
 
     <link rel="manifest" th:href="@{../assets/images/favicon/site.webmanifest}">
 
